tests/no_std/without.stderr
warning: unused import: `displaydoc_watt::Display`
  --> $DIR/without.rs:20:5
   |
20 | use displaydoc_watt::Display;
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: `FakeType` doesn't implement `core::fmt::Display`
  --> $DIR/without.rs:25:44
   |
25 | static_assertions::assert_impl_all!(label; FakeType, core::fmt::Display);
   | -------------------------------------------^^^^^^^^----------------------
   | |                                          |
   | |                                          `FakeType` cannot be formatted with the default formatter
   | required by this bound in `label::assert_impl_all`
   |
   = help: the trait `core::fmt::Display` is not implemented for `FakeType`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
